syntax = "proto3";

option go_package = "DSYSHandin4-Consensus/grpc/proto";


service HomeworkFourService{
    rpc SendTokenToNextCLient(TokenSendRequest) returns (TokenSendResponse){};
    
    rpc SendIDToNextClient(IDSendRequest) returns (IDSendResponse){};
}

message TokenSendResponse{
    bool success = 1;
};

message TokenSendRequest{
    int32 token = 1;
    int32 senderID = 2;
}

message IDSendRequest{
    int32 senderID = 1;
}

message IDSendResponse{
    bool success = 1;
};